--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "homepage": "https://github.com/SriSarveshA1/Notification_system#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "node-crm": "^0.0.1",
-    "nodemailer": "^6.7.7"
+    "node-cron": "^3.0.1",
+    "nodemailer": "^6.7.7",
+    "uuid": "^8.3.2"
   }
 }
